<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">edusocial</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="pro_name">普通高校教务系统</string>
	<string name="tips">请选择登陆身份</string>
	<string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
	
	<string name="title4firstcenter">面向学校教学管理的移动社交系统</string>
	<string name="title4firstup">面向学校教学管理的移动社交系</string>
	<string name="xiangce">相册</string>
	<string name="finish">完成</string>
	<string name="zhanghao:">账号：</string>
	<string name="inputzhanghao">请输入登陆账号！</string>
	<string name="mima:">密码：</string>
	<string name="inputmima">请输入登陆密码！</string>
	<string name="identity:">身份：</string>
	<string name="login">登陆</string>
	<string name="noregist:">还没账号？立即注册</string>
	<string name="homework">作业</string>
	<string name="publish">发布</string>
	<string name="reading">读取数据中....</string>
	<string name="maintitle">教学互动系统</string>
	<string name="news">消息</string>
	<string name="foundation">功能</string>
	<string name="friend">好友</string>
	<string name="searchfriend">搜索好友</string>
	<string name="search">搜索</string>
	<string name="submithw">交作业</string>
	<string name="docomment">评论</string>
	<string name="addcontactor">添加联系人</string>
	<string name="inform">通知</string>
	<string name="life">生活点滴</string>
	<string name="selectfromalbum">从相册中选取</string>
	<string name="cancel">取消</string>
	<string name="pubphoto">发布照片</string>
	<string name="pubphotohint">分享您的那点新鲜事儿...</string>
	<string name="pubinform">发布通知</string>
	<string name="informtypehint">选择通知类型</string>
	<string name="schoolinform">学校通知</string>
	<string name="classinform">班级通知</string>
	<string name="informclasshint">选择通知班级</string>
	<string name="informtitle">通知标题</string>
	<string name="pubhw">发布作业</string>
	<string name="selectclass">选择班级</string>
	<string name="hwtitle">作业标题</string>
	<string name="pubinformhwhint">写些什么吧...</string>
	<string name="personalinfo">个人信息</string>
	<string name="tx:">头像：</string>
	<string name="loading">载入中...</string>
	<string name="nick:">昵称：</string>
	<string name="school:">学校：</string>
	<string name="class:">班级：</string>
	<string name="addfriend">添加好友</string>
	<string name="registpage">注册页面</string>
	<string name="addtx">添加头像</string>
	<string name="acc:">账号：</string>
	<string name="useridentity">用户身份</string>
	<string name="selectschoolhint">点选学校</string>
	<string name="selectclasshint">点选班级</string>
	<string name="register">注册</string>
	<string name="getmore">查看更多</string>
	<string name="reqnick">ta的昵称</string>
	<string name="ifaddtaasyourfriend">是否愿意添加ta为好友？</string>
	

	
</resources>
